[Rahul] | BAH-4046 | Fix. Task Type Alignment In Tile

--- a/src/features/DisplayControls/NursingTasks/styles/UpdateNursingTasks.scss
+++ b/src/features/DisplayControls/NursingTasks/styles/UpdateNursingTasks.scss
@@ -65,10 +65,3 @@
 .bx--overflow-menu-options {
   z-index: 10000;
 }
-
-.tile-subcontent {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 0.6rem;
-}
